# video-transcriber

./: .gitignore  docker-compose.yml
api/: .gitignore  Cargo.toml
api/.sqlx/: query-832b6baf9610fc3ff7b86bde502eb8f977dacbe91129a24a27cf01a42143ba9d.json
api/migrations/: 20250403004323_create-users.sql
api/src/: auth.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs  user.rs  users.rs
api/src/common/: auth_backend.rs  db.rs  errors.rs  mod.rs  store.rs
api/src/handlers/: auth.rs  mod.rs  transcribe.rs  users.rs
api/src/models/: app.rs  user.rs
api/src/services/: mod.rs  transcribe.rs
api/src/web/: app.rs  mod.rs  routers.rs
db/: go.mod  go.sum  main.go
db/migrations/: 20250609030233_create_tasks.sql  20250610021926_update_id.sql  20250610030015_add_transcript.sql  20250614025912_add_user.sql  20250614221914_change_task_id_to_uuid.sql  20250614223619_new_task_trigger.sql
transcriber/: .env.sh  .gitignore  Cargo.toml  env.sh
transcriber/examples/: test_notify.rs
transcriber/src/: converter.rs  db.rs  lib.rs  main.rs  models.rs  transcriber.rs  utils.rs  whisper.rs
web/: index.html  package.json  prettier.config.js  vite.config.ts
web/public/: audio-animation.lottie
web/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/api/transcribe/: route.ts
web/src/components/: file-card.tsx  file-uploader.tsx
web/src/lib/: auth.ts  db-pool.ts  s3-client.ts
web/src/routes/: __root.tsx  index.tsx
web/src/routes/_auth/: login.tsx  route.tsx  signup.tsx
