[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = {version = "0.8.3", features = ["macros"]} 
axum-extra = "0.10.1"
axum-valid = "0.23.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = {version = "1.16.0", features = ["v4", "serde"]}
validator = {version = "0.20.0", features = ["derive"]}
