[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.88"
aws-config = { version = "1.6.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.83.0"
axum = {version = "0.8.3", features = ["macros", "multipart"]} 
axum-extra = "0.10.1"
axum-login = "0.17.0"
axum-valid = "0.23.0"
dotenvy = "0.15.7"
password-auth = "1.0.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["time", "sqlite", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tower-sessions = { version = "0.14.0", default-features=false, features = ["signed"] }
tower-sessions-core = { version = "0.14.0", features=["deletion-task"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
validator = {version = "0.20.0", features = ["derive"]}
whisper-rs = "0.14.2"
