[package]
name = "transcriber"
version = "0.1.0"
edition = "2024"


[package.metadata.vcpkg]
dependencies = ["ffmpeg"]
git = "https://github.com/microsoft/vcpkg"
rev = "5a2324f" 

[dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
ez-ffmpeg = { version = "0.4.2", features = ["async"] }
futures-util = "0.3.31"
hound = "3.5.1"
reqwest = { version = "0.12.19", features = ["stream"] } 
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres" ] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
urlencoding = "2.1.3"
whisper-rs = "0.14.2"

[env]
PKG_CONFIG_PATH = { value = "target/vcpkg/installed/x64-linux/lib/pkgconfig", relative = true }

